package com.design.pattern.adapter.delegate;

/**
 * 假设 DirectCurrent 是类。
 *
 * @author hf huminxi2017@gmail.com
 * @version on 2018/12/10 14:06
 */
public abstract class DirectCurrent {
    public abstract void use12V();
}
